agregados los servicios de gunicorn y express a docc (falta configurar reverse proxy)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '2'
 
 services:
+    gunicorn:
+        build: ./py
+        
+    node:
+        build: ./js
+
     nginx:
         image: nginx:1.17.3
         ports:
