corrigiendo rutas para que funcione correctamente el proxy_pass con node

--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -7,10 +7,10 @@ upstream python {
 }
 
 server {
-    location /node {
+    location /node/ {
         proxy_pass http://node/;
     }
-    location /python {
+    location /python/ {
         proxy_pass http://python/;
     }
 }
