lod Dockerfiles no reinstalan las dependencias si la app cambia

--- a/js/Dockerfile
+++ b/js/Dockerfile
@@ -3,8 +3,9 @@ FROM node:8.10
 RUN mkdir /opt/app
 WORKDIR /opt/app
 
-COPY app.js package.json package-lock.json ./
-
+COPY package.json package-lock.json ./
 RUN npm install
-CMD ["node", "app.js"]
 
+COPY app.js ./
+
+CMD ["node", "app.js"]
