Cambio locations 'python' en Nginx por 'gunicorn'

--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -2,7 +2,7 @@ upstream node {
     server node:3000;
 }
 
-upstream python {
+upstream gunicorn {
     server gunicorn:4000;
 }
 
@@ -10,7 +10,7 @@ server {
     location /node/ {
         proxy_pass http://node/;
     }
-    location /python/ {
-        proxy_pass http://python/;
+    location /gunicorn/ {
+        proxy_pass http://gunicorn/;
     }
 }
