Added multiworker gunicorn container

--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -6,11 +6,18 @@ upstream gunicorn {
     server gunicorn:4000;
 }
 
+upstream gunicorn_multi {
+    server gunicorn_multi:5000;
+}
+
 server {
     location /node/ {
         proxy_pass http://node/;
     }
     location /gunicorn/ {
         proxy_pass http://gunicorn/;
+    }
+    location /gunicorn_multi/ {
+        proxy_pass http://gunicorn_multi/;
     }
 }
