--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -6,11 +6,26 @@ upstream python {
     server gunicorn:4000;
 }
 
+upstream bbox-1 {
+    server bbox:9090;
+}
+
+upstream bbox-2 {
+    server bbox:9091;
+}
+
+
 server {
     location /node/ {
         proxy_pass http://node/;
     }
     location /python/ {
         proxy_pass http://python/;
+    }
+    location /bbox-1/ {
+        proxy_pass http://bbox-1/;
+    }
+    location /bbox-2/ {
+        proxy_pass http://bbox-2/;
     }
 }
