--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             - "5555:80"
         volumes:
             - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./nginx_main_workers_config.conf:/etc/nginx/nginx.conf
             - ./store/static/files:/static:ro
         links:
             - gunicorn_multi
