--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,16 +1,20 @@
-upstream node {
-    least_conn;
-    server 7573-tp1_node_1:3000;
-    server 7573-tp1_node_2:3000;
-    server 7573-tp1_node_3:3000;
-}
+# upstream node {
+#     least_conn;
+#     server 7573-tp1_node_1:3000;
+#     server 7573-tp1_node_2:3000;
+#     server 7573-tp1_node_3:3000;
+# }
 
-#upstream node {
-#    server node:3000;
-#}
+upstream node {
+    server node:3000;
+}
 
 upstream gunicorn {
     server gunicorn:4000;
+}
+
+upstream gunicorn_gevent {
+    server gunicorn_gevent:5001;
 }
 
 upstream gunicorn_multi {
@@ -35,6 +39,9 @@ server {
     }
     location /gunicorn_multi/ {
         proxy_pass http://gunicorn_multi/;
+    }
+    location /gunicorn_gevent/ {
+        proxy_pass http://gunicorn_gevent/;
     }
     location /bbox-1/ {
         proxy_pass http://bbox-1/;
